sidebar misalignment fixed

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -58,7 +58,7 @@
     cursor: pointer;
 }
 
-.img {
+.compass, .bulb, .chat, .code {
     width: 40px; 
     height: auto; 
     border-radius: 20px;
